# hackathon-fordham

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/_base/: nlip_agent.py  tools.py
agents/api/: server.py
agents/architecture/: server.py
agents/decisions/: server.py
agents/module/: server.py
agents/onboarding/: server.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DepGraph.tsx  Markdown.tsx  ModuleDrawer.tsx  PortChips.tsx  Timeline.tsx
frontend/lib/: api.ts
orchestrator/: main.py  pipeline.py  workspace.py
scripts/: run_all.sh  stop_all.sh
shared/: config.py  envelopes.py  schemas.py
tests/fixtures/tiny-repo/: auth.py  main.py  store.py  templates.py
